--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
+    "@fastify/websocket": "^8.3.1",
     "@prisma/client": "^5.9.1",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
+    "ioredis": "^5.3.2",
     "zod": "^3.22.4"
   }
 }
